test(Course): 강좌를 정렬하는 서비스 테스트 코드 작성